# backend

./: .env.example  .gitignore  Dockerfile  Dockerrun.aws.json  LICENSE  Pipfile  Procfile  README.md  alembic.ini  benchmark.yml  crud.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  session.py  sonar-project.properties  test_cron.py
.ebextensions/: crons.config
.elasticbeanstalk/: config.yml
.github/workflows/: ci.yml
.well-known/: ai-plugin.json
README-fature/: existing-features.md
README-feature/: 1.existing-features.md  2.tests-existing-code.md  3.impl-repository_pattern.md  4.impl-factory_pattern_repos.md  6.impl-commands-command_handler.md  impl-event_and_messagebus.md  impl-event_driven-with-redis.md  impl-factory_pattern_repos.md  tests-existing-code.md
alembic/: env.py
api/: preprocessors.py  urls.py  views.py
backend/: fetch.py  json_fetch.py  preprocess.py  preprocessors.py  settings.py  sort.py  types.py  urls.py
data/: occupations.py  second_vote_results.py
data/json/: candidacies_2017.json  candidacies_2021.json  candidacy_2016_berlin.json  candidacy_2016_mv.json  committees.json  mandates.json  mandates_berlin.json  mandates_mv.json  polls_bundestag.json  sidejobs.json  votes_bundestag.json
database/: models.py
models/: __init__.py  candidacy_mandate.py  career_path.py  city.py  committee.py  committee_has_topic.py  committee_membership.py  constituency.py  country.py  cv.py  election_program.py  electoral_data.py  electoral_list.py  field_related_link.py  fraction.py  fraction_membership.py  parliament.py  parliament_period.py  party.py  party_style.py  politician.py  politician_weblink.py  poll.py  poll_has_topic.py  position.py  position_statement.py  sidejob.py  sidejob_has_mandate.py  sidejob_has_topic.py  sidejob_organization.py  sidejob_organization_has_topic.py  topic.py  vote.py  zip_code.py
src/: cron_test.py  logging_config.py
src/api/: control_main.py  crud.py  main.py  repository.py  schemas.py  security.py
src/cron_jobs/: append_db.py  control_append_db.py  crud_db.py
src/db/: alembic.ini  connection.py
src/domain/: commands.py  control_commands.py  control_events.py  events.py
tests/: conftest.py  test_crud.py  test_main.py  test_preprocessors.py
(+136 files in other folders)
