[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Johann Hemmann <johann.hemmann@code.berlin>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
fastapi = "^0.68.0"
requests = "^2.26.0"
uvicorn = "^0.14.0"
python-dotenv = "^0.19.1"
SQLAlchemy = "^1.4.25"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
