[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Richard Krümmel <richard.kruemmel@code.berlin>", "Johann Hemmann <johann.hemmann@code.berlin>"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.4"
fastapi = "^0.68.0"
requests = "^2.26.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
python-dotenv = "^0.19.1"
SQLAlchemy = "^1.4.25"
pydantic = "^1.8.2"
fastapi-pagination = "^0.9.0"
psycopg2-binary = "^2.9.1"
alembic = "^1.7.4"
sqlalchemy-stubs = "^0.4"
Scrapy = "^2.5.1"
pandas = "^1.3.4"
mock-alchemy = "^0.2.5"
schedule = "^1.1.0"
aioredis = "^2.0.1"
fastapi-redis-cache = "^0.2.5"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.20.9"
aiofiles = "^23.1.0"
urllib3 = "1.26.15"
pylint = "^3.0.0"
openai = "^0.28.0"

[tool.poetry.dev-dependencies]
black = "22.3"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
